tests/models/enum/named/u128/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        u128
    ),
}
fn main() {}
